# life-update-desktop

./: .gitignore  README.md
agent/: .env.example  README.md  build.sh  life-update-agent.spec  pyproject.toml  run_agent.py
agent/config/: exclude_list.default.json
agent/src/life_update_agent/: cli.py  config.py  daemon.py  db.py  worker.py
agent/src/life_update_agent/capture/: exclude_list.py  file_watcher.py  frame_queue.py  idle_monitor.py  screen_watcher.py  window_tracker.py
agent/src/life_update_agent/inference/: cluster.py  models.py  ollama_client.py  presidio_pass.py  summarize.py  vision_models.py
agent/src/life_update_agent/redaction/: entropy.py  patterns.py  scanner.py
agent/src/life_update_agent/sync/: client.py  queue.py
agent/tests/: test_cluster.py  test_entropy.py  test_exclude_list.py  test_file_watcher.py  test_frame_queue.py  test_patterns.py  test_screen_watcher.py  test_summarize.py
app-shell/: package-lock.json  package.json
app-shell/evals/: 01-project-in-titles.txt  02-no-project-anywhere.txt  03-design.txt  04-admin.txt  05-continuity.txt  expected.json
app-shell/scripts/: build-ai-helper.sh  bundle-tesseract.sh  fetch-ollama.sh  prepare-resources.sh  run-evals.sh
app-shell/src/: App.css  App.tsx
app-shell/src-tauri/: Cargo.toml  tauri.conf.json
app-shell/src-tauri/icons/: icon.icns
app-shell/src-tauri/src/: agent.rs  lib.rs  main.rs  models.rs  ollama.rs  ollama_process.rs  settings.rs  vision_models.rs
app-shell/src-tauri/src/agent/: apple_ai.rs  cluster.rs  db.rs  file_watcher.rs  frame_queue.rs  idle.rs  mod.rs  redaction.rs  screen_watcher.rs  summarize.rs  sync.rs  vision_ocr.rs  window_tracker.rs  worker.rs
app-shell/src/components/: History.tsx  Home.tsx  Onboarding.tsx  Settings.tsx
app-shell/src/hooks/: usePullProgress.ts
app-shell/swift/: LifeUpdateAI.swift
