[project]
name = "life-update-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yorubadeveloper", email = "bukunmiadewale3@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "en-core-web-sm",
    "httpx>=0.28.1",
    "mss>=10.2.0",
    "presidio-analyzer>=2.2.363",
    "presidio-anonymizer>=2.2.363",
    "psutil>=7.2.2",
    "pynput>=1.8.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "pywinctl>=0.4.1",
    "watchdog>=6.0.0",
]

[project.scripts]
life-update-agent = "life_update_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
