[package]
name = "app-shell"
version = "0.3.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "stream", "blocking"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
active-win-pos-rs = "0.9"
notify = "8"
xcap = "0.4"
image = "0.25"
regex = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v5"] }
sysinfo = "0.33"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-vision = "0.3"
base64 = "0.22"
log = "0.4"

